fix alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -97,6 +97,13 @@ body {
   width:150px;
 }
 
+.project-div {
+  p {
+    margin-bottom: 5px;
+    margin-top: -10px;
+  }
+}
+
 .inline {
   display: inline-block;
 }
